[gd_scene load_steps=3 format=3 uid="uid://chmmu54g6e2s7"]

[ext_resource type="Theme" uid="uid://cshd85xo1vlb2" path="res://assets/themes/ui_theme.tres" id="1_rype7"]
[ext_resource type="Script" uid="uid://cac440klkwgh4" path="res://prefabs/ui/settings/settings.gd" id="2_xcttn"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rype7")
script = ExtResource("2_xcttn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.125, 0.0587979, 0, 0.365)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -86.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 380
theme_override_constants/margin_right = 380

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvertCameraCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 18
text = "Invert Camera"
alignment = 1

[node name="SensitivityContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="MarginContainer/VBoxContainer/SensitivityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sensitivity"
horizontal_alignment = 1

[node name="SensitivitySlider" type="HSlider" parent="MarginContainer/VBoxContainer/SensitivityContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.05
max_value = 0.85
step = 0.1
value = 0.35

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="SFXContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "< Back"
